// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Refinement List Filter tests should add disabled state when no results 1`] = `
<div data-qa="filter--testid" class="sk-hierarchical-refinement-list filter--testid is-disabled">
  <div data-qa="title" class="sk-hierarchical-refinement-list__header">test title</div>
  <div data-qa="options" class="sk-hierarchical-refinement-list__root">
    <div class="sk-hierarchical-refinement-list__hierarchical-options"></div>
  </div>
</div>
`;

exports[`Refinement List Filter tests should render 2nd level and have 1 levels selected correctly 1`] = `
<div data-qa="filter--testid" class="sk-hierarchical-refinement-list filter--testid">
  <div data-qa="title" class="sk-hierarchical-refinement-list__header">test title</div>
  <div data-qa="options" class="sk-hierarchical-refinement-list__root">
    <div class="sk-hierarchical-refinement-list__hierarchical-options">
      <div>
        <div class="sk-hierarchical-refinement-option">
          <div class="sk-hierarchical-refinement-option__text">option1</div>
          <div class="sk-hierarchical-refinement-option__count">#1</div>
        </div>
      </div>
      <div>
        <div class="sk-hierarchical-refinement-option is-selected">
          <div class="sk-hierarchical-refinement-option__text">option2</div>
          <div class="sk-hierarchical-refinement-option__count">#2</div>
        </div>
        <div class="sk-hierarchical-refinement-list__hierarchical-options">
          <div>
            <div class="sk-hierarchical-refinement-option">
              <div class="sk-hierarchical-refinement-option__text">option2child1</div>
              <div class="sk-hierarchical-refinement-option__count">#1</div>
            </div>
          </div>
          <div>
            <div class="sk-hierarchical-refinement-option is-selected">
              <div class="sk-hierarchical-refinement-option__text">option2child2</div>
              <div class="sk-hierarchical-refinement-option__count">#1</div>
            </div>
            <div class="sk-hierarchical-refinement-list__hierarchical-options"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Refinement List Filter tests should render correctly 1`] = `
<div data-qa="filter--testid" class="sk-hierarchical-refinement-list filter--testid">
  <div data-qa="title" class="sk-hierarchical-refinement-list__header">test title</div>
  <div data-qa="options" class="sk-hierarchical-refinement-list__root">
    <div class="sk-hierarchical-refinement-list__hierarchical-options">
      <div>
        <div class="sk-hierarchical-refinement-option">
          <div class="sk-hierarchical-refinement-option__text">option1</div>
          <div class="sk-hierarchical-refinement-option__count">#1</div>
        </div>
      </div>
      <div>
        <div class="sk-hierarchical-refinement-option">
          <div class="sk-hierarchical-refinement-option__text">option2</div>
          <div class="sk-hierarchical-refinement-option__count">#2</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
